# rex

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
rexbase/: CMakeLists.txt  README.md
rexbase/inc/: rexbase.hpp
rexbase/inc/rex/: assert.hpp  atomic.hpp  config.hpp  iterator.hpp  limits.hpp  ratio.hpp  type_traits.hpp  types.hpp
rexbase/inc/rex/algo/: max.hpp
rexbase/inc/rex/atomic/: aliases.hpp  atomic_flag.hpp  atomic_impl.hpp  atomic_operations.hpp  memory_order.hpp
rexbase/inc/rex/iter/: advance.hpp  back_insert_iterator.hpp  container_helpers.hpp  distance.hpp  front_insert_iterator.hpp  insert_iterator.hpp  iterator.hpp  iterator_tags.hpp  iterator_traits.hpp  move_iterator.hpp  next.hpp  prev.hpp  reverse_iterator.hpp
rexbase/inc/rex/limit/: float_denorm_style.hpp  float_round_style.hpp  numeric_limits.hpp
rexbase/inc/rex/mem/: addressof.hpp
rexbase/inc/rex/numeric/: abs.hpp  gcd.hpp
rexbase/inc/rex/ratio/: aliases.hpp  ratio_impl.hpp
rexbase/inc/rex/traits/: aligned_storage.hpp  aligned_union.hpp  alignment_of.hpp  common_type.hpp  conditional.hpp  conjunction.hpp  decay.hpp  disjunction.hpp  enable_if.hpp  extent.hpp  has_unique_repr.hpp  integral_constant.hpp  invoke_result.hpp  is_abstract.hpp  is_aggregate.hpp  is_arithmetic.hpp  is_array.hpp  is_assignable.hpp  is_base_of.hpp  is_class.hpp  is_compund.hpp  is_const_volatile.hpp  is_constructible.hpp  is_convertible.hpp  is_destructible.hpp  is_empty.hpp  is_enum.hpp  is_final.hpp  is_floating_point.hpp  is_function.hpp  is_fundamental.hpp  is_integral.hpp  (+21 more)
rexbase/src/: assert.cpp
testing/: CMakeLists.txt  test_assert.cpp  test_atomic.cpp  test_limits.cpp  test_traits.cpp  test_types.cpp
(+6 files in other folders)
